frb_example/pure_dart_multi/rust/extra_c_output_path_2/c_output_3.h

typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_CrossSharedStructInBlock1And2 {
  struct wire_uint_8_list *name;
} wire_CrossSharedStructInBlock1And2;
typedef union SharedComplexEnumInAllBlocksKind {
  struct wire_SharedComplexEnumInAllBlocks_Empty *Empty;
  struct wire_SharedComplexEnumInAllBlocks_Primitives *Primitives;
  struct wire_SharedComplexEnumInAllBlocks_Nested *Nested;
  struct wire_SharedComplexEnumInAllBlocks_Optional *Optional;
  struct wire_SharedComplexEnumInAllBlocks_Buffer *Buffer;
  struct wire_SharedComplexEnumInAllBlocks_Enums *Enums;
  struct wire_SharedComplexEnumInAllBlocks_BytesArray *BytesArray;
} SharedComplexEnumInAllBlocksKind;
typedef struct wire_SharedComplexEnumInAllBlocks {
  int32_t tag;
  union SharedComplexEnumInAllBlocksKind *kind;
} wire_SharedComplexEnumInAllBlocks;
typedef struct wire_list_shared_complex_enum_in_all_blocks {
  struct wire_SharedComplexEnumInAllBlocks *ptr;
  int32_t len;
} wire_list_shared_complex_enum_in_all_blocks;
typedef struct wire_SharedStructInAllBlocks {
  int32_t id;
  double num;
  struct wire_uint_8_list *name;
  struct wire_list_shared_complex_enum_in_all_blocks *enum_list;
} wire_SharedStructInAllBlocks;
typedef struct wire_SharedStructInBlock1And2 {
  int32_t id;
  double num;
  struct wire_uint_8_list *name;
} wire_SharedStructInBlock1And2;
typedef struct wire_StructOnlyForBlock3 {
  int64_t id;
  double num;
  struct wire_uint_8_list *name;
} wire_StructOnlyForBlock3;
typedef struct wire_StructDefinedInBlock3 {
  struct wire_uint_8_list *name;
} wire_StructDefinedInBlock3;
typedef union EnumDefinedInBlock3Kind {
  struct wire_EnumDefinedInBlock3_Quit *Quit;
  struct wire_EnumDefinedInBlock3_Move *Move;
  struct wire_EnumDefinedInBlock3_Write *Write;
  struct wire_EnumDefinedInBlock3_ChangeColor *ChangeColor;
} EnumDefinedInBlock3Kind;
typedef struct wire_EnumDefinedInBlock3 {
  int32_t tag;
  union EnumDefinedInBlock3Kind *kind;
} wire_EnumDefinedInBlock3;
void wire_test_method__method__CrossSharedStructInBlock1And2(int64_t port_,
                                                             struct wire_CrossSharedStructInBlock1And2 *that,
                                                             struct wire_uint_8_list *message);
void wire_test_static_method__static_method__CrossSharedStructInBlock1And2(int64_t port_,
                                                                           struct wire_uint_8_list *message);
void wire_test_enum_method__method__SharedComplexEnumInAllBlocks(int64_t port_,
                                                                 struct wire_SharedComplexEnumInAllBlocks *that,
                                                                 struct wire_uint_8_list *message);
void wire_test_static_enum_method__static_method__SharedComplexEnumInAllBlocks(int64_t port_,
                                                                               struct wire_uint_8_list *message);
void wire_test_method__method__SharedStructInAllBlocks(int64_t port_,
                                                       struct wire_SharedStructInAllBlocks *that,
                                                       struct wire_uint_8_list *message,
                                                       uint32_t num);
void wire_test_static_method__static_method__SharedStructInAllBlocks(int64_t port_,
                                                                     struct wire_uint_8_list *message);
void wire_test_method__method__SharedStructInBlock1And2(int64_t port_,
                                                        struct wire_SharedStructInBlock1And2 *that,
                                                        struct wire_uint_8_list *message);
intptr_t init_frb_dart_api_dl(void *obj);
struct wire_EnumDefinedInBlock3 *new_box_autoadd_enum_defined_in_block_3(void);
struct wire_StructDefinedInBlock3 *new_box_autoadd_struct_defined_in_block_3(void);
struct wire_StructOnlyForBlock3 *new_box_autoadd_struct_only_for_block_3(void);
union EnumDefinedInBlock3Kind *inflate_EnumDefinedInBlock3_Move(void);
union EnumDefinedInBlock3Kind *inflate_EnumDefinedInBlock3_Write(void);
union EnumDefinedInBlock3Kind *inflate_EnumDefinedInBlock3_ChangeColor(void);